fix highlight in etext when no AND (#390)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3892,7 +3892,12 @@ a.result + #matches.mobile,
    a.result ~ #matches:not(.mobile) > .match ~ .label,
    a.result ~ #matches:not(.mobile) > .match { padding-left:28px; }
 
-   #root .App .resultPage .result-content .result-content.etext {  padding-top:15px;padding-bottom:0; padding-right:0;  }
+
+   a.result ~ #matches:not(.mobile) > .match ~ .label { padding-bottom:10px; }
+
+   
+   #root .App .resultPage .result-content .result-content.etext {  padding-top:5px;padding-bottom:3px; padding-right:0;  }
+
    
    #root .App .resultPage .result-content .result-content.etext #icon + .result { display:none;  }
 
@@ -3900,7 +3905,9 @@ a.result + #matches.mobile,
 
    #root .App .resultPage .result-content .result-content.etext #matches .match { padding-left:10px; margin-top:0;  }
 
-   #root .App .resultPage .result-content .result-content.etext #matches { display:inline-block; clear:none; padding-left:0; position:relative; max-width: calc(100% - 40px);}
+   #root .App .resultPage .result-content .result-content.etext #matches { display:inline-block; clear:none; padding-left:0; position:relative; max-width: calc(100% - 40px);
+      margin-bottom:0;
+   }
 
    .App #results .result-content .result-content .more-details,
    .result-content .result-content #icon { display:none; }
