--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3916,6 +3916,7 @@ a.result + #matches.mobile,
 
    .App #results .more-details { display:inline-block; margin-top:10px;}
 
+   .App #results #matches.mobile.on + #matches:not(.mobile) .match.dates,
    .App #results #matches.mobile.on + #matches:not(.mobile) .match.inRootInst,
    .App #results #matches.mobile.on + #matches:not(.mobile) .match.by,
    .App #results #matches.mobile:not(.on) + #matches:not(.mobile),
@@ -3925,6 +3926,8 @@ a.result + #matches.mobile,
    .App #results #matches.mobile.on + #matches:not(.mobile) .match.by ~ .match.by .label { visibility: visible;}
 
    .result-content.wThumb { min-height:110px;}
+
+   .result-content #icon.person img { max-height:60px; }
 
 
    /* ------------------------------------------------------------------------------------------------------------------------ resource */
