--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3914,7 +3914,7 @@ a.result + #matches.mobile,
 
    .result-content .result-content > .result > .contenu { padding-left:7px; }
 
-   .App #results .more-details { display:inline-block; margin-top:10px;}
+   .App #results .more-details { display:inline-block; margin-top:10px;  cursor:pointer;}
 
    .App #results #matches.mobile.on + #matches:not(.mobile) .match.dates,
    .App #results #matches.mobile.on + #matches:not(.mobile) .match.inRootInst,
@@ -3927,7 +3927,7 @@ a.result + #matches.mobile,
 
    .result-content.wThumb { min-height:110px;}
 
-   .result-content #icon.person img { max-height:60px; }
+   .result-content #icon img { max-height:60px; }
 
 
    /* ------------------------------------------------------------------------------------------------------------------------ resource */
@@ -4100,3 +4100,26 @@ a.result + #matches.mobile,
 
 }
 
+/* -------------------------------------------------------------------------------------------------------------------------------- simplesearch */
+
+.simpleSearch footer,
+.simpleSearch #samples,
+.simpleSearch .result-content #permalink,
+.simpleSearch #res-container > ul:not(#samples) li,
+.simpleSearch #settings,
+.simpleSearch .mobile-button,
+.simpleSearch > .App > div > :not(#res-header):not(#res-container) { display: none; }
+
+#root .simpleSearch .App .resultPage #res-header { height:40px;  }
+#root .simpleSearch .App .resultPage #res-header > div { padding:0 10px; }
+#root .simpleSearch #res-container { width:calc(100%) !important; padding:10px; margin:0; min-height:360px; box-sizing: border-box;}
+
+.simpleSearch #results { padding:0; }
+
+.simpleSearch .result-content { padding:20px; }
+
+.simpleSearch .result-content+.result-content::before { width:calc(100% - 2 * 20px); left:20px; }
+
+.simpleSearch #res-header #pagine #nb:first-child { margin:0; padding:0; }
+
+.simpleSearch .nav { box-shadow:none; }
