--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1892,13 +1892,14 @@ body > [id^="menu-"] > div:last-child,
 .poPdf > div b,
 .poPdf > div a { font-size:12px; font-family: "Noto Sans"; color:#4d4d4d;}
 .poPdf > div li { padding:6px 17px; }
-.poPdf > div a { padding:0 6px;}
+.poPdf > div a { padding:0 6px; display:flex;}
 .poPdf > div a + a { border-left:1px solid rgba(0,0,0,0.35); }
 .poPdf > div a[href] { color:#d73449;}
 
 .pdfMenu a { position:relative;}
 .pdfMenu b { display:inline-block; white-space: nowrap;}
-.pdfLoading,.zipLoading { /*color:white;*/ padding-right:25px; }
+.pdfLoading:last-of-type,.zipLoading:last-of-type,
+.pdfLoading + span,.zipLoading + span { padding-right:25px; }
 .pdfSpinner,.zipSpinner { left: calc(100% - 20px) !important;  top: 45% !important; }
 
 .poPdf > div a li:hover,
