--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1142,6 +1142,13 @@ h4:not(:hover) > .lang
 .OF0 { overflow:hidden; }
 .PE0 { pointer-events:none; cursor:auto; }
 
+
+
+#root > div > .resource.simple { cursor:pointer; padding-top:5px; }
+#root > div > .resource.simple > *    { pointer-events:none; }
+#root > div > .resource.simple .mobile-button { display:none; }
+
+
 /* -+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ resource */
 
 
@@ -3933,6 +3940,7 @@ a.result + #matches.mobile,
    .result-content #icon img { max-height:60px; }
 
 
+  
    /* ------------------------------------------------------------------------------------------------------------------------ resource */
 
    #root > div > .resource { padding:5px; padding-top:60px; }
