fix double underlining (#450)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2862,7 +2862,9 @@ a.login { text-decoration:underline; cursor:pointer; }
 .instance-link .urilink:hover,
 .match .urilink:hover, 
 .match .multi a:hover,
-.resource .data:not(#first-image) a:hover { border-bottom:1px solid #d73449; }
+.resource .data a:hover { border-bottom:1px solid #d73449; }
+
+.resource .data#first-image a:hover { border:none; }
 
 .urilink { position:relative; }
 /*h4:not(.sameAs)*/ .urilink.hasIcon, h4.hasIcon { padding-left:0px; }
