--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -119,7 +119,12 @@ body.auto_rela .inApp.mirador-container .slotIconContainer { position:absolute !
 .mirador-container .mirador-viewer .image-view { position:absolute; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li {  width:auto;display:block;position:relative; padding:0; margin-bottom:0; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li img { position:relative; }
-.mirador-container ul.scroll-listing-thumbs li .thumb-label { display:inline-block; border:none !important;}
+.mirador-container ul.scroll-listing-thumbs li .thumb-label { display:inline-block; border:none !important; }
+@media(max-width:800px) { 
+    .mirador-container ul.scroll-listing-thumbs li .thumb-label { font-size:14px; }
+    .mirador-container ul.scroll-listing-thumbs li .thumb-label[lang=bo] { font-size:16px; }
+}
+
 .user-buttons.mirador-main-menu li:nth-last-child(3) { padding-left:5px;cursor:default;  }
 .user-buttons.mirador-main-menu li:nth-last-child(4) { padding-right:0px;cursor:default;  }
 .user-buttons.mirador-main-menu li:nth-last-child(4).on a {opacity:1; }
