update map viewport with pagination (#478)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3258,6 +3258,8 @@ h2.on .lang, .propCollapseHeader .lang, .propCollapse .lang { position:absolute 
 .placeMap.large .gm-style > iframe + div {  margin-bottom:25px; }
 
 .resultsMap { width:100%; height:480px; margin-bottom:16px;}
+.resultsMap[data-nb-markers='0'] { display:none; }
+.resultsMap[data-nb-markers='0'] + .result-content { scroll-margin: 214px;}
 
 body {overflow-x:hidden; }
 
