--- a/src/components/App.css
+++ b/src/components/App.css
@@ -638,6 +638,8 @@ p.no-result {
 #res-container > ul li:hover { background:none;}
 #res-container > ul li { height:auto !important;}
 
+#results  > li:first-child > h4 > a { padding-bottom:0; }
+
 .result-content > hr { margin:0;height:0;padding:0;opacity:0;border:0; }
 li + a.result { margin-top:-5px; }
 
@@ -873,7 +875,6 @@ a.result + #matches .result-content #icon > :not(.thumb) img { width:40px; }
    border-top: 4px solid rgba(239,238,238,0.6); left:80px; top:-2px; 
 }
 
-.resultsMap + .result-content { scroll-margin:710px; }
 
 .place.result-content { min-height:110px; } 
 .person.result-content { min-height:95px; } 
@@ -3257,7 +3258,7 @@ h2.on .lang, .propCollapseHeader .lang, .propCollapse .lang { position:absolute 
 .gm-style > iframe + div {  margin-bottom:20px; }
 .placeMap.large .gm-style > iframe + div {  margin-bottom:25px; }
 
-.resultsMap { width:100%; height:480px; margin-bottom:16px;}
+.resultsMap { width:100%; height:480px; margin-bottom:16px; margin-top:24px;}
 .resultsMap[data-nb-markers='0'] { display:none; }
 .resultsMap[data-nb-markers='0'] + .result-content { scroll-margin: 214px;}
 
@@ -3281,6 +3282,9 @@ h2.on .lang, .propCollapseHeader .lang, .propCollapse .lang { position:absolute 
 .resultsMap .leaflet-popup-content span.highlight {
    background-color: #fce08e; padding:0 2px; font-weight:700;
 }
+
+
+.resultsMap + .result-content { scroll-margin:745px; }
 
 body {overflow-x:hidden; }
 
