--- a/src/components/App.css
+++ b/src/components/App.css
@@ -789,6 +789,7 @@ a.result + #matches .result-content::before { left:110px; width:calc(100% - 110p
 .result-content #icon.instance img,
 .result-content #icon.topic img{ width:60px; }
 
+.result-content #icon .copyRi.lowQ img { margin-top:4px !important; }
 
 .result-content #icon.wCopyR .copyRi img,
 .result-content #icon.wCopyR > img { width:20px; display: inline-block; margin:4px 6px 0 6px; opacity:0.75; }
