add citations-js locales/styles in /scripts + on-demand fetching of missing locale/style (#498)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1741,7 +1741,7 @@ span[lang^='sa-']:not([lang$='-ewts']) { text-transform: capitalize;}
 #perma #cite svg { color:#343434; padding:3px; }
 
 #popDL.cite > div { display:flex; }
-#popDL.cite > div .output { width: 450px; padding:16px; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+#popDL.cite > div .output { width: 480px; padding:16px; display: flex; flex-direction: column; justify-content: center; align-items: center;}
 #popDL.cite > div .output .main { max-height: 130px; width:100%; margin-bottom:16px; text-align:left; font-size:14px; padding:0 16px 8px 16px; box-sizing: border-box; }
 
 #popDL.cite > div .output .actions { width:100%; display:flex; justify-content: space-between; padding:0 16px; box-sizing: border-box;}
@@ -1750,6 +1750,9 @@ span[lang^='sa-']:not([lang$='-ewts']) { text-transform: capitalize;}
 
 #popDL.export { margin-top:40px;}
 #popDL.export li { max-width:260px; white-space:normal; }
+
+
+#popDL.cite li { max-width:150px; white-space:normal; }
 
 #popLang { z-index:100100; }
 #popLang.black > div:last-child { margin-top:0px; }
